--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "bootstrap": "^3.3.7",
     "cookie-parser": "^1.4.3",
     "express": "^4.0.0",
     "express-session": "^1.15.6",
-    "express3-handlebars": "^0.5.2"
+    "express3-handlebars": "^0.5.2",
+    "jquery": "^1.9.1",
+    "popper": "^1.0.1",
+    "popper.js": "^1.12.9"
+  },
+  "devDependencies": {
+    "font-awesome": "^4.7.0"
   }
 }
